--- a/app/src/main/res/layout/new_try_hemoglobin.xml
+++ b/app/src/main/res/layout/new_try_hemoglobin.xml
@@ -285,6 +285,7 @@
                     android:orientation="vertical"
                     android:layout_marginTop="30dp">
                     <Button
+                        android:id="@+id/btn_scan"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:text="Scan"
