--- a/app/src/main/res/layout/new_try_hemoglobin.xml
+++ b/app/src/main/res/layout/new_try_hemoglobin.xml
@@ -301,7 +301,7 @@
                     <Spinner
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/spindevice"
+                        android:id="@+id/sp_device_list"
                         android:spinnerMode="dialog"
                         android:prompt="@string/device"/>
                     <Button
@@ -310,7 +310,7 @@
                         android:text="Connect"
                         android:textColor="#fff"
                         android:textSize="18sp"
-                        android:id="@+id/btnconnect"
+                        android:id="@+id/btn_connect"
                         android:shadowColor="#A8A8A8"
                         android:layout_margin="3dp"
                         android:shadowDx="0"
@@ -336,7 +336,7 @@
                             android:shadowDy="0"
                             android:layout_margin="3dp"
                             android:shadowRadius="5"
-                            android:onClick="test"/>
+                            android:id="@+id/btn_test"/>
                         <Button
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
@@ -351,7 +351,7 @@
                             android:shadowDy="0"
                             android:shadowRadius="5"
                             android:background="@drawable/buttonshape"
-                            android:onClick="device_off"/>
+                            android:id="@id/btn_next"/>
 
                     </LinearLayout>
                     <LinearLayout
