--- a/app/src/main/res/layout/new_try_hemoglobin.xml
+++ b/app/src/main/res/layout/new_try_hemoglobin.xml
@@ -295,6 +295,7 @@
                         android:shadowColor="#A8A8A8"
                         android:shadowDx="0"
                         android:shadowDy="0"
+                        android:visibility="gone"
                         android:shadowRadius="5"
                         android:onClick="scan"
                         android:background="@drawable/buttonshape"/>
