--- a/app/src/main/res/layout/activity_scan_list.xml
+++ b/app/src/main/res/layout/activity_scan_list.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,24 +7,23 @@
 
     <include
         android:id="@+id/layout_toolbar"
-        layout="@layout/toolbar"/>
-
+        layout="@layout/toolbar" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@drawable/background"
         android:layout_below="@+id/layout_toolbar"
+        android:background="@drawable/background"
+        android:orientation="vertical"
         android:padding="@dimen/pad10">
 
         <LinearLayout
             android:id="@+id/layout_search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:weightSum="2"
             android:layout_margin="50dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:weightSum="2">
 
             <TextView
                 android:id="@+id/tv_scaningtext"
@@ -33,9 +31,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                android:paddingLeft="20dp"
                 android:gravity="left"
                 android:padding="@dimen/pad5"
+                android:paddingLeft="20dp"
                 android:text="New Text"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
@@ -47,14 +45,14 @@
                 android:layout_height="@dimen/hgt45"
                 android:layout_gravity="end"
                 android:layout_weight="1"
-                android:paddingEnd="@dimen/pad15"
-                android:paddingStart="@dimen/pad15"
-                android:text="@string/scan_button"
                 android:background="@drawable/repeat"
+                android:padding="5dp"
+                android:paddingStart="@dimen/pad15"
+                android:paddingEnd="@dimen/pad15"
+                android:text="@string/scan_button"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:textSize="24sp"
-                android:padding="5dp"
                 android:textStyle="bold" />
 
         </LinearLayout>
@@ -62,15 +60,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:weightSum="2"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:weightSum="2">
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:orientation="vertical"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/iv_glucose"
@@ -82,10 +80,10 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="25sp"
-                    android:textColor="@color/white"
                     android:layout_gravity="center_horizontal"
-                    android:text="@string/turn_on_glucose"/>
+                    android:text="@string/turn_on_glucose"
+                    android:textColor="@color/white"
+                    android:textSize="25sp" />
 
             </LinearLayout>
 
@@ -94,12 +92,12 @@
                 android:id="@+id/rv_results"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/layout_search"
+                android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
                 android:layout_weight="1"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/layout_search"
-                tools:listitem="@layout/blelistrow"
-                android:scrollbars="vertical"/>
+                android:scrollbars="vertical"
+                tools:listitem="@layout/blelistrow" />
 
         </LinearLayout>
 
@@ -110,9 +108,9 @@
         android:id="@+id/layout_btncontainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
         android:layout_margin="@dimen/margin20"
         android:gravity="center"
         android:orientation="horizontal"
@@ -124,19 +122,17 @@
             android:layout_height="@dimen/hgt45"
             android:layout_gravity="center"
             android:layout_weight="0"
-            android:text="Next"
             android:background="@drawable/repeat"
+            android:text="Next"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="25sp"
-            android:textStyle="bold"
-            />
+            android:textStyle="bold" />
 
         <android.support.v4.widget.Space
             android:layout_width="@dimen/space25"
-            android:visibility="gone"
-            android:layout_height="wrap_content"/>
-
+            android:layout_height="wrap_content"
+            android:visibility="gone" />
 
     </LinearLayout>
 
@@ -144,12 +140,12 @@
         android:id="@+id/imageview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="200dp"
-        android:layout_marginEnd="200dp"
         android:layout_above="@+id/layout_btncontainer"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
+        android:layout_marginStart="200dp"
+        android:layout_marginEnd="200dp"
         android:background="#E6EBEC"
         android:scaleType="fitCenter"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 </RelativeLayout>
