--- a/app/src/main/res/layout/activity_height_screen.xml
+++ b/app/src/main/res/layout/activity_height_screen.xml
@@ -194,7 +194,7 @@
             android:visibility="visible">
 
             <Spinner
-                android:id="@+id/sp_height"
+                android:id="@+id/sp_devices"
                 android:layout_width="119dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.64" />
@@ -218,7 +218,7 @@
             android:orientation="vertical">
 
             <EditText
-                android:id="@+id/et_multiline"
+                android:id="@+id/et_bluetooth_logs"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:ellipsize="end"
