--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -228,11 +228,33 @@
                         android:textSize="@dimen/textsize24"
                         android:textStyle="bold" />
 
+                    <RelativeLayout
+                        android:id="@+id/rl_ConnectionStatusLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/view_custom"
+                        android:layout_marginTop="@dimen/margin20"
+                        android:visibility="visible">
+
+                        <TextView
+                            android:id="@+id/tv_connection_status"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentLeft="true"
+                            android:layout_margin="5dp"
+                            android:layout_weight="0"
+                            android:background="@drawable/blue_bg_container"
+                            android:gravity="center"
+                            android:text="Connecting..."
+                            android:textColor="@color/white" />
+                    </RelativeLayout>
+
+
                     <LinearLayout
                         android:id="@+id/layout_glucose"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@id/tv_offline_title"
+                        android:layout_below="@id/rl_ConnectionStatusLayout"
                         android:gravity="center"
                         android:orientation="horizontal"
                         android:weightSum="2">
@@ -298,7 +320,6 @@
                                 android:textSize="25sp"
                                 android:textStyle="bold" />
 
-
                             <Button
                                 android:id="@+id/btn_next"
                                 android:layout_width="match_parent"
@@ -306,7 +327,7 @@
                                 android:layout_margin="10dp"
                                 android:layout_weight="1"
                                 android:background="@drawable/greenback"
-                                android:text="Next"
+                                android:text="Skip Test"
                                 android:textColor="@color/white"
                                 android:textSize="25sp"
                                 android:textStyle="bold" />
@@ -358,8 +379,6 @@
         </LinearLayout>
 
     </ScrollView>
-
-
 </LinearLayout>
 
 
