--- a/app/src/main/res/layout/and_dashboard_new.xml
+++ b/app/src/main/res/layout/and_dashboard_new.xml
@@ -332,61 +332,32 @@
                         android:layout_weight="1.0">
 
                         <TextView
+                            android:id="@+id/tv_label"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:layout_marginBottom="@dimen/margin20"
                             android:gravity="center"
-                            android:text="Press Device Button and Start Measurement"
+                            android:text=""
                             android:textSize="@dimen/space25" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="100dp"
-                            android:orientation="horizontal"
+                            android:orientation="vertical"
                             android:weightSum="3">
 
                             <Button
-                                android:id="@+id/btn_repeat"
-                                android:layout_width="wrap_content"
-                                android:layout_height="50dp"
-                                android:layout_gravity="center_vertical"
-                                android:layout_margin="5dp"
-                                android:layout_marginTop="10dp"
-                                android:layout_weight="1"
-                                android:background="@drawable/repeat"
-                                android:gravity="center"
-                                android:text="REPEAT"
-                                android:textColor="@color/white"
-                                android:textSize="35sp"
-                                android:textStyle="bold" />
-
-                            <Button
-                                android:id="@+id/btn_start"
-                                android:layout_width="wrap_content"
-                                android:layout_height="50dp"
-                                android:layout_gravity="center_vertical"
-                                android:layout_margin="5dp"
-                                android:layout_weight="1"
-                                android:background="@drawable/greenback"
-                                android:gravity="center"
-                                android:text="START"
-                                android:textColor="@color/white"
-                                android:textSize="35sp"
-                                android:textStyle="bold" />
-
-
-                            <Button
                                 android:id="@+id/btn_next"
-                                android:layout_width="wrap_content"
+                                android:layout_width="500dp"
                                 android:layout_height="50dp"
-                                android:layout_gravity="center_vertical"
+                                android:layout_gravity="center"
                                 android:layout_margin="5dp"
-                                android:layout_weight="1"
                                 android:background="@drawable/repeat"
                                 android:gravity="center"
                                 android:text="NEXT"
+                                android:layout_weight="1"
                                 android:textColor="@color/white"
                                 android:textSize="35sp"
                                 android:textStyle="bold" />
