Refactor Printer Auto Connect

--- a/app/src/main/res/layout/act_main.xml
+++ b/app/src/main/res/layout/act_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/homelay1"
@@ -18,33 +18,35 @@
             android:id="@+id/imageView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:scaleType="fitXY"
             android:layout_weight="0.1"
+            android:scaleType="fitXY"
             android:src="@mipmap/applogo" />
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1.4">
+
             <View
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
-                />
+                android:layout_height="match_parent" />
         </LinearLayout>
 
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:gravity="right"
-            android:layout_weight="0.5">
+            android:layout_weight="0.5"
+            android:gravity="right">
+
             <Button
                 android:id="@+id/btIcon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_margin="10dp"
-                android:visibility="gone"
-                android:background="@drawable/btnbluetooth" />
+                android:background="@drawable/btnbluetooth"
+                android:visibility="gone" />
         </LinearLayout>
     </LinearLayout>
 
@@ -53,7 +55,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/homelay1"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <LinearLayout
             android:id="@+id/btbannerlay"
@@ -61,7 +63,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:gravity="center"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/imageView2"
@@ -69,15 +71,15 @@
                 android:layout_height="wrap_content"
                 android:text="Connect To Printer"
                 android:textColor="@color/white"
-                android:textSize="30sp"/>
+                android:textSize="30sp" />
 
             <LinearLayout
                 android:id="@+id/scanBTLL"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:visibility="visible"
-                android:orientation="horizontal" >
+                android:orientation="horizontal"
+                android:visibility="visible">
 
                 <LinearLayout
                     android:id="@+id/lay21"
@@ -86,7 +88,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_weight="1"
                     android:gravity="center|right"
-                    android:orientation="vertical" >
+                    android:orientation="vertical">
 
                     <Button
                         android:id="@+id/btnScanbt"
@@ -101,7 +103,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="left|center_vertical"
-                    android:orientation="horizontal" >
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/tvScanbt"
@@ -109,9 +111,9 @@
                         android:layout_height="wrap_content"
                         android:layout_marginRight="50dp"
                         android:text="Scan BT Devices"
-                        android:textSize="25sp"
                         android:textAppearance="?android:attr/textAppearanceLarge"
                         android:textColor="#ffffff"
+                        android:textSize="25sp"
                         android:textStyle="bold" />
                 </LinearLayout>
             </LinearLayout>
@@ -126,27 +128,30 @@
         android:fadingEdge="vertical"
         android:scrollbars="vertical"
         android:visibility="visible">
+
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:weightSum="2">
+
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:orientation="vertical">
 
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="400dp"
-                    android:src="@drawable/printer"
-                    android:layout_margin="50dp"/>
+                    android:layout_margin="50dp"
+                    android:src="@drawable/printer" />
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_marginTop="150dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="150dp"
+                android:layout_weight="1"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -154,9 +159,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginBottom="15dp"
                     android:layout_marginTop="5dp"
-                    android:orientation="horizontal" >
+                    android:layout_marginBottom="15dp"
+                    android:orientation="horizontal">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -164,17 +169,17 @@
                         android:text="@string/actMain_link_device_info_title"
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:textColor="@color/white"
-                        android:textSize="30sp"/>
+                        android:textSize="30sp" />
 
                     <TextView
                         android:id="@+id/actMain_tv_device_info"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dip"
-                        android:textSize="30sp"
                         android:text="@string/actMain_device_info"
                         android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:textColor="@color/white" />
+                        android:textColor="@color/white"
+                        android:textSize="30sp" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -183,7 +188,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:gravity="center"
-                    android:orientation="horizontal" >
+                    android:orientation="horizontal">
 
                     <Button
                         android:id="@+id/actMain_btn_pair"
@@ -206,10 +211,10 @@
                         android:background="@drawable/btnprint_back"
                         android:onClick="onClickBtnConn"
                         android:text="@string/actMain_btn_comm"
-                        android:visibility="gone"
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:textColor="#FFFFFF"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:visibility="gone" />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
@@ -227,12 +232,12 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical" >
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -240,8 +245,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:background="@color/white"
-                    android:orientation="vertical" >
-                </LinearLayout>
+                    android:orientation="vertical"></LinearLayout>
 
                 <LinearLayout
                     android:id="@+id/btbannerlay1"
@@ -249,34 +253,33 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:gravity="center"
-                    android:orientation="horizontal" >
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/imageView3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:text="Select Protocol"
                         android:textColor="@color/white"
                         android:textSize="20sp"
-                        android:visibility="gone"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        />
+                        android:visibility="gone" />
                 </LinearLayout>
 
                 <RadioGroup
                     android:id="@+id/radiogrp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginLeft="22dp" >
+                    android:layout_marginLeft="22dp"
+                    android:layout_marginBottom="10dp">
 
                     <RadioButton
                         android:id="@+id/radioprotocol"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/protocol"
-                        android:visibility="gone"
                         android:textAppearance="?android:attr/textAppearanceLarge"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:visibility="gone" />
 
                     <RadioButton
                         android:id="@+id/radioesc"
@@ -284,15 +287,15 @@
                         android:layout_height="wrap_content"
                         android:text="@string/escprotocol"
                         android:textAppearance="?android:attr/textAppearanceLarge"
-                        android:visibility="gone"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:visibility="gone" />
                 </RadioGroup>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:orientation="horizontal" >
+                    android:orientation="horizontal">
 
                     <Button
                         android:id="@+id/btnDisplay"
@@ -313,7 +316,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_margin="10dp"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <LinearLayout
             android:id="@+id/botlay1"
@@ -321,14 +324,14 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/back_but"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:background="@drawable/back_but12" />
+                android:background="@drawable/back_but12"
+                android:visibility="gone" />
         </LinearLayout>
 
         <LinearLayout
@@ -337,14 +340,14 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/btnInfo"
-                android:visibility="gone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/inf_but" />
+                android:background="@drawable/inf_but"
+                android:visibility="gone" />
         </LinearLayout>
 
         <LinearLayout
@@ -353,14 +356,14 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/btnHelp"
-                android:visibility="gone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/help_but1" />
+                android:background="@drawable/help_but1"
+                android:visibility="gone" />
         </LinearLayout>
     </LinearLayout>
 
